INTYGFV-14355: Handle the situation if a certificate has been issued from Webcert but later sent to the recipient from Mina intyg. (#639)